--- a/devOpsProject2/Dockerfile
+++ b/devOpsProject2/Dockerfile
@@ -1,12 +1,11 @@
-FROM microsoft/dotnet:sdk AS build-env
+FROM microsoft/dotnet:latest
 WORKDIR /app
 COPY *.csproj ./
 RUN dotnet restore
-COPY . ./
+#COPY . ./
 RUN dotnet publish -c Release -o out
-
-FROM microsoft/aspnetcore:2.0
-WORKDIR /app
-COPY --from=build-env /app/out ./
+#FROM microsoft/aspnetcore:2.0
+#WORKDIR /app
+COPY --from=/app/out ./
 EXPOSE 80
 ENTRYPOINT ["dotnet", "devOpsProject2.dll"]
