--- a/devOpsProject2/appsettings.json
+++ b/devOpsProject2/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=35.198.215.102;userid=root;password=simplilearn;database=DevOpsProject2;"
+    "DefaultConnection": "server=35.198.198.228;userid=root;password=mainak;database=DevOpsProject2;"
   }
 }
