--- a/devOpsProject2/Dockerfile
+++ b/devOpsProject2/Dockerfile
@@ -1,11 +1,6 @@
-FROM microsoft/dotnet:latest
+FROM microsoft/aspnetcore:2.0
+ARG source
 WORKDIR /app
-COPY *.csproj ./
-RUN dotnet restore
-#COPY . ./
-RUN dotnet publish -c Release -o out
-#FROM microsoft/aspnetcore:2.0
-#WORKDIR /app
-COPY --from=/app/out ./
 EXPOSE 80
+COPY ${source:-obj/Docker/publish} .
 ENTRYPOINT ["dotnet", "devOpsProject2.dll"]
